update query parameters to be required, simplify rule creation logic
